Add tags snippet #101 - 1. added snippet to show tags according to permission. 2. Modified meta of Community model and added add_tag permission 3. included snippet in post.html and post_list.html

--- a/systers_portal/templates/blog/post.html
+++ b/systers_portal/templates/blog/post.html
@@ -30,4 +30,5 @@
   {% else %}
     {% include 'blog/snippets/resources_sidebar.html' with resource=post %}
   {% endif %}
+  {% include 'blog/snippets/tags_sidebar.html' %}
 {% endblock %}
