--- a/systers_portal/templates/blog/post_list.html
+++ b/systers_portal/templates/blog/post_list.html
@@ -39,4 +39,5 @@
     {% include 'blog/snippets/resources_sidebar.html' %}
     {% include 'blog/snippets/resource_types.html' %}
   {% endif %}
+  {% include 'blog/snippets/tags_sidebar.html' %}
 {% endblock %}
