Specified url for transfer ownership Fixed repeat of class in previous commit

--- a/systers_portal/templates/community/snippets/join_button.html
+++ b/systers_portal/templates/community/snippets/join_button.html
@@ -2,7 +2,7 @@
   {% if user.is_authenticated and user.is_active %}
     {# user is the community admin #}
     {% if user == community.admin.user %}
-      <a href="#" role="button" class="btn btn-warning btn-block">Transfer ownership</a>
+      <a href="{% url "transfer_ownership" community.slug %}" role="button" class="btn btn-warning btn-block">Transfer ownership</a>
     {% else %}
       {# user is a community member #}
       {% if is_member %}
